deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-deployment
  namespace: mautic
  labels:
    app: mautic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic
  template:
    metadata:
      labels:
        app: mautic
    spec:
      containers:
        - image: mautic/mautic 
          name: mautic
          ports:
            - containerPort: 80
              name: mautic
