mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mautic
  name: mautic-db
  labels:
    app: mautic-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mautic-db
