service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mautic
  labels:
    app: mautic 
  name: mautic-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: mautic
